...
            android:id="@+id/textViewUsernameHeadingUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_optional" />

        <EditText
            android:id="@+id/editTextUsernameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:maxLength="42"
            android:maxLines="1" />

...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="2">

            <CheckBox
                android:id="@+id/checkBoxSpecialCharacterUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_characters" />

            <CheckBox
                android:id="@+id/checkBoxLettersLowUpdate"
...
