...

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domain"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress" />

...

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_optional"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress" />

...
